--- a/relatorio4/relatorio4.tex
+++ b/relatorio4/relatorio4.tex
@@ -159,8 +159,8 @@ velocidade do circuito para o modelo típico e para o modelo \emph{worstspeed}.
             Esquemático (SM = "0")  &       1.200                       &       790                                     \\  \hline
             C + CC (SM = "1")       &       840                         &       570                                     \\  \hline
             C + CC (SM = "0")       &       890                         &       600                                     \\  \hline
-            R + C + CC (SM = "1")   &       810                         &       XXX                                     \\  \hline % XXX preencher
-            R + C + CC (SM = "0")   &       855                         &       XXX                                     \\  \hline % XXX preencher
+            R + C + CC (SM = "1")   &       810                         &       560                                     \\  \hline
+            R + C + CC (SM = "0")   &       855                         &       580                                     \\  \hline
 
         \end{tabular}
     \end{table}
