Máquina de estados ok

--- a/relatorio5/relatorio5.tex
+++ b/relatorio5/relatorio5.tex
@@ -42,6 +42,9 @@ o layout de um circuito.
    opção \emph{multipages} ou não). Qual é a diferença entre o esquemático
    associado a \verb:EXEMPLAR_XTR: e o esquemático associado a \verb:EXEMPLAR:.
 
+   ...
+\bigskip
+
 \textbf{6.} Verifique o \emph{Critical Path} do esquemático sintetizado e mapeado na
    tecnologia da AMS. O que significa este \emph{critical path} e como é
    calculado?
